Expand FTop to full claimed asset valuation